--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ def mainClass = 'org.lwjgl.examples.spaceinvaders.Game'
 def javaLevel = 1.7
 def appArgs = '' // '-fullscreen'
 
-// Use this to debug startup problems when using capsule + launch4j
+// Set this to true to debug startup problems when using capsule + launch4j
 def debugStartup = false
 
 dependencies {
@@ -47,7 +47,9 @@ def nativePaths = ['windows', 'linux', 'osx'].collect{'build/natives/' + it}
 run {
 	mainClassName = mainClass
 	systemProperty 'java.library.path', files(nativePaths).asPath
-	args appArgs
+	if (appArgs?.trim()) {
+		args appArgs
+	}
 }
 
 // With this, "gradle clean run" will work
@@ -57,43 +59,39 @@ tasks.run.dependsOn(unpackNatives)
 configurations { myCapsule }
 dependencies { myCapsule 'co.paralleluniverse:capsule:0.10.1-SNAPSHOT' }
 
-def minJavaVersion = javaLevel + '.0'
-def capsuleJarName = project.name + "-capsule.jar"
+def minimumJavaVersion = javaLevel + '.0'
 
-// See http://blog.paralleluniverse.co/2014/05/08/modern-java-pt2/
 task myCapsule(type: FatCapsule, dependsOn: [jar, unpackNatives]) {
 	capsuleConfiguration = configurations.myCapsule
-	archiveName = capsuleJarName
 
-	// Embed application jar and dependencies
-	applicationSource jar
+	// Application jar is embedded through applicationSource default value
 	applicationClass mainClassName
+
+	// Embed application dependencies
 	embedConfiguration = configurations.runtime { exclude '*-natives-*'}
 
 	// Copy native libraries to capsule root
 	from (nativePaths)
 
-	// We just need the Capsule class (no runtime download)
-	capsuleFilter = { include 'Capsule.class' }
+	capsuleManifest {
+		minJavaVersion = minimumJavaVersion
+		jvmArgs = run.jvmArgs
 
-	manifest {
-		attributes(
-				'Main-Class'  : 'Capsule',
-				'Application-Class' : mainClassName,
-				'Min-Java-Version' : minJavaVersion,
-				'JVM-Args' : run.jvmArgs.join(' '), // copy JVM args from the run task
-				'Args' : appArgs
-				)
+		// Append appArgs to arguments, if not null or blank
+		if (appArgs?.trim()) {
+			args << appArgs
+		}
+
 		if (debugStartup) {
-			attributes 'System-Properties': 'capsule.log=verbose'
+			systemProperties['capsule.log'] = 'verbose'
 		}
 	}
 }
 
 launch4j {
 	mainClassName = 'Capsule'
-	jar = file('build/libs/' + capsuleJarName)
-	jreMinVersion = minJavaVersion
+	jar = tasks.myCapsule.outputs.files.singleFile
+	jreMinVersion = minimumJavaVersion
 	outfile = project.name + '.exe'
 	if (debugStartup) {
 		headerType = 'console'
